# randomforest-gpu

./: .gitignore  BUILD_WHEELS.md  LICENSE  MANIFEST.in  README.md  build_wheels.sh  meson.build  pyproject.toml  test_gpu_usage.py
.github/workflows/: build-gpu-wheels.yml  build-wheels.yml  test.yml  wheels.yml
examples/: basic_usage.py  sklearn_comparison.py
src/fortran/: rf_core.f90  rf_gpu_wrapper.f90
src/randomforest_gpu/: __init__.py  backend.py  ensemble.py  meson.build
tests/: test_basic.py  test_gpu_cpu_parity.py  test_sklearn_compatibility.py  test_wheel_loading.py
tools/wheels/: cibw_before_build_macos.sh
